refact: removendo classes e implementando autenticação com o jwt